--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
         <div>
 
-            <button class="button btn-decrease">Decrease</button>
+            <button class="button decrease">Decrease</button>
 
-            <button class="button btn-reset">Reset</button>
+            <button class="button reset">Reset</button>
 
-            <button class="button btn-increase">Increase</button>
+            <button class="button increase">Increase</button>
 
         </div>
         
